--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Template</title>
+    <title>Wednesday Info</title>
     <meta name="keywords" content="HTML, CSS, JavaScript, Bootstrap, Template">
     <meta name="author" content="Rikus, Pretorius, 241044">
     <link rel="stylesheet" href="CSS/main.css">
